# py-armodel

./: .coveralls.yml  .flake8  .gitignore  .mypy.ini  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CLAUDE.md  IFLOW.md  LICENSE  README.md  SoftwareComp1.arxml  coverage.md  coverage_integration.xml  coverage_unit.xml  package.json  pyproject.toml  pytest.ini  ruff.toml  setup.py
.claude/: ralph-loop.local.md  settings.local.json
.claude/commands/: README.md  gh-workflow.md  lint.md  merge-pr.md  quality.md  req.md  test.md
.github/workflows/: python-package.yml  python-publish.yml
.iflow/: settings.json
.iflow/agents/: code-reviewer.md  gh-workflow.md  merge-pr.md  quality.md  req.md  test.md  v2-model-refactor.md
conf/: mkdocs.yml
data/: test.sh
demo/v2_reader_writer/: demo.py  sample_input.arxml  sample_output.arxml
demo/v2_reader_writer/models/: __init__.py
demo/v2_reader_writer/reader/: __init__.py  base_reader.py  element_handler.py  schema_registry.py
demo/v2_reader_writer/utils/: __init__.py  errors.py
demo/v2_reader_writer/writer/: __init__.py  base_writer.py
docs/: Makefile  changelog.rst  com_spec.md  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  sw_components.md
docs/api/: armodel.rst  cli.rst  models.rst  parser.rst  writer.rst
docs/autosar/: bsw_module_description_template.md
docs/development/: class_mapping_fix_progress.md  coding_rules.md  coding_rules_v2.md  coding_rules_violations_analysis.md  ecuinstance_fix_summary.md  parser_architecture.md  parser_developer_guide.md  parser_refactoring_summary.md  v2_migration_guide.md
docs/examples/: basic_usage.rst  communication_setup.rst  diagnostics.rst  working_with_components.rst
docs/plan/: arxml_parser_test_coverage.md
docs/plans/: 2025-01-24-arxml-parser-refactoring-design.md  2025-01-24-arxml-parser-refactoring-implementation.md  2025-01-24-integration-test-baseline-design.md  2025-01-31-autosar-m2-class-generation-design.md  2025-01-31-autosar-m2-class-generation-implementation.md  2025-01-31-test-driven-package-generation-design.md  2025-02-05-models-v2-design.md  2025-02-05-models-v2-implementation.md  2025-02-06-fix-v2-ruff-errors.md  2026-02-01-package-structure-migration-design.md  2026-02-06-mypy-v2-fixes-design.md  2026-02-07-v2-arxml-reader-writer-design.md  2026-02-07-v2-redesign-easier-to-use.md  2026-02-07-v2-redesign-implementation-plan.md  todo  todo.md  v2-annotation-cleanup-summary.md  v2-redesign-execution-instructions.md  v2-session-summary.md
docs/requirements/: autosar_models.md  autosar_models_hierarchy.md  class-package.json  deviation.md  deviation_class_hierarchy.md  deviation_class_hierarchy_extra_classes.md  deviation_class_hierarchy_mismatches.md  deviation_class_hierarchy_summary.md  deviation_package.md  index.json  mapping.json  package_comparison.md  requirements.md  software_components.md  software_components_hierarchy.md
docs/requirements/issues/: missing-classes-2026-02-13.md  missing-classes-2026-02-14.md  missing-classes-chapters.md  (+4 more)
docs/user_guide/: arxml_parsing.rst  arxml_writing.rst  cli_tools.rst  installation.rst  quickstart.rst
docs/xsd/: AUTOSAR_STRICT_COMPACT.xsd
reports/: class_mapping_report.md  coverage.md  deviation_class_hierarchy_extra_classes.md  deviation_class_hierarchy_mismatches.md  deviation_class_hierarchy_summary.md  deviation_package.md  docstring_review.md  existing_classes.json  method_parity_review.md  mypy_raw_errors.txt  mypy_type_analysis.md  package_comparison.md  run_tests_report.md  v2_coding_rules_compliance.md  v2_validation_report.md
scripts/: add_all_declarations.py  add_init_all.py  add_missing_imports.py  add_validate_abstract.py  benchmark_parser.py  check_v2_coding_rules.py  check_v2_deviation.py  compare-package-implementation.py  copy_base_classes.py  create_v2_structure.py  deviation-class-hierarchy.py  deviation-package.py  deviation.py  fix-package-implementation.md  fix-package-implementation.py  fix_all_syntax_errors.py  fix_circular_imports.py  fix_imports.py  fix_models_v2_imports.py  fix_relative_imports.py  fix_v2_coding_rules.py  fix_v2_data_prototype_imports.py  fix_v2_missing_imports.py  fix_v2_reftype_imports.py  fix_v2_syntax_errors.py  generate_class_package_json.py  generate_docstring_report.py  generate_mapping_json.py  generate_method_parity_checklist.py  generate_v2_models.py  migrate_bsw_classes.py  migrate_common_classes.py  migrate_diagnostic_classes.py  migrate_generic_classes.py  migrate_models_v2_to_v2_models.py  migrate_swcomponent_classes.py  migrate_system_classes.py  migrate_tests_models_v2_to_v2_models.py  refactor_commonstructure_v2.py  remove_validate_abstract.py  (+4 more)
scripts/lib/: __init__.py  code_generator.py  code_utils.py  package_loader.py  test_generator.py  type_resolver.py
src/: __init.py
src/armodel/: __init__.py
test_files/: AUTOSAR_MOD_AISpecification_ApplicationDataType_Blueprint.arxml  AUTOSAR_MOD_AISpecification_BaseTypes_Standard.arxml  AUTOSAR_MOD_AISpecification_Collection_Body_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_OccptPedSfty_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_Pt_Blueprint.arxml  AUTOSAR_MOD_AISpecification_CompuMethod_Blueprint.arxml  AUTOSAR_MOD_AISpecification_DataConstr_Blueprint.arxml  AUTOSAR_MOD_AISpecification_DataConstr_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_Keyword_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_PhysicalDimension_Standard.arxml  AUTOSAR_MOD_AISpecification_PortInterface_Blueprint.arxml  AUTOSAR_MOD_AISpecification_PortInterface_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_SwComponentTypes_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Unit_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_Unit_Standard.arxml  CanSystem.arxml  SoftwareComponents.arxml
tests/: coverage.md  report.py  requirements.txt
tests/integration_tests/: README.md  __init__.py  config.yaml  conftest.py  test_class_mapping.py  test_class_mapping.py.disabled  test_roundtrip.py
tests/test_armodel/: test_model_imports.py
(+3104 files in other folders)
