[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armodel"
dynamic = ["version"]
description = "the python arxml parser"
readme = "README.md"
requires-python = ">=3.5"
license = "MIT"
authors = [
    {name = "melodypapa", email = "melodypapa@outlook.com"},
]
keywords = ["AUTOSAR", "ARXML"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama",
    "openpyxl",
    "lxml",
]

[project.optional-dependencies]
pytest = ["pytest-cov"]

[project.urls]
Homepage = "http://github.com/melodypapa/py-armodel"

[project.scripts]
format-xml = "armodel.cli.format_xml_cli:main"
arxml-dump = "armodel.cli.arxml_dump_cli:cli_main"
arxml-format = "armodel.cli.arxml_format_cli:main"
connector2xlsx = "armodel.cli.connector2xlsx_cli:main"
connector-update = "armodel.cli.connector_update_cli:main"
armodel-component = "armodel.cli.swc_list_cli:main"
armodel-system-signal = "armodel.cli.system_signal_cli:main"
armodel-memory-section = "armodel.cli.memory_section_cli:main"
armodel-file-list = "armodel.cli.file_list_cli:main"
armodel-uuid-checker = "armodel.cli.uuid_checker_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "armodel.__version__"}
